# claude-manager

./: .gitignore  CLAUDE.md  DESIGN.md  PLANNING.md  UX.md  pyproject.toml
api/: auth.py  dispatch_daemon.py  main.py  models.py
cli/: api_client.py  main.py  planning_client.py
dispatch/: config.py  db.py  vm.py
images/: build_base.sh
mcp_server/: server.py
scripts/: migrate_planning_tasks.py
sql/: 001_init.sql  002_warm_pools.sql  003_task_name.sql  004_planning_fields.sql
tui/: '  Cargo.toml
tui/examples/: codex_probe.rs  codex_probe_raw.rs
tui/src/: api.rs  app.rs  backend.rs  config.rs  input.rs  main.rs  planning.rs  session.rs  terminal_widget.rs  worktree.rs
tui/src/workflow/: events.rs  history.rs  mod.rs  run.rs  spawn.rs  template.rs  toml_schema.rs  transcript.rs
worker/: startup.sh  warm_startup.sh
workflows/: feedback.toml  review.toml
