[package]
name = "claude-manager-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
# Terminal UI framework
ratatui = { version = "0.30", features = ["crossterm"] }
crossterm = "0.29"

# Terminal emulation
alacritty_terminal = "0.25"

# Key event -> ANSI byte encoding
terminput = "0.5"
terminput-crossterm = "0.4"

# HTTP client (blocking, used in background thread)
ureq = { version = "3", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# Error handling
anyhow = "1"
base64 = "0.22.1"

# Desktop notifications (used for per-session idle notifications)
notify-rust = "4"

[dev-dependencies]
tempfile = "3"
